--- a/q2_minimap2/assets/nanoplot/index.html
+++ b/q2_minimap2/assets/nanoplot/index.html
@@ -1,14 +1,40 @@
-{% extends 'base.html' %}
-
-{% block content %}
-
-<iframe src="nanoplot_data/NanoPlot-report.html" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-</iframe>
-
-{% endblock %}
-
-{% block footer %}
-{% set loading_selector = '#loading' %}
-{% include 'js-error-handler.html' %}
-
-{% endblock %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>{% block title %}{{ q2templates_default_page_title }}{% endblock %}</title>
+    <link rel="stylesheet" href="./q2templateassets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./q2templateassets/css/normalize.css"/>
+    <link rel="stylesheet" href="./q2templateassets/css/base-template.css"/>
+    <script src="./q2templateassets/js/jquery-3.2.0.min.js" charset="utf-8"></script>
+    <script src="./q2templateassets/js/bootstrap.min.js" charset="utf-8"></script>
+    {% block head %}
+    {% endblock %}
+  </head>
+  <body>
+    <div class="container{% block fixed %}-fluid{% endblock %}">
+      <div id="q2templatesheader" class="row">
+        <div class="col-lg-12">
+          <a href="http://qiime2.org/">
+            <img src="./q2templateassets/img/qiime2-rect-200.png" alt="QIIME 2">
+          </a>
+        </div>
+      </div>
+      <div id="content-wrapper" style="position: relative;">
+        {% block content %}
+        {% endblock %}
+        <iframe src="nanoplot_data/NanoPlot-report.html" style="position: absolute; top: 0; left: 0; width: 100%; height: calc(100vh - 100px); border: none;">
+        </iframe>
+      </div>
+    </div>
+    <script type="text/javascript">
+      if (window.frameElement) {
+          document.getElementById('q2templatesheader').remove();
+      }
+    </script>
+    {% block footer %}
+    {% endblock %}
+  </body>
+</html>
